# SHL-assesment-

./: .gitignore  README.md  approach_summary.html  approach_summary.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt  scratch_test.py  test_agent.py
backend/agent/: __init__.py  catalog_curator.py  clarification_engine.py  comparison_engine.py  confidence_estimator.py  conversation_analyzer.py  guardrail_engine.py  hallucination_guard.py  intent_detector.py  orchestrator.py  prompts.py  recommendation_engine.py  refinement_engine.py  requirement_extractor.py  response_formatter.py  retrieval_controller.py
backend/api/: middleware.py  routes.py
backend/app/: config.py  main.py
backend/data/: bm25.pkl  faiss.index
backend/evaluation/: eval_runner.py  metrics.py  test_cases.json
backend/models/: enums.py  schemas.py
backend/prompts/: system_prompt.py
backend/retrievers/: hybrid_retriever.py  query_rewriter.py  reranker.py
backend/scraper/: shl_scraper.py
backend/services/: chat_service.py  guardrails.py  llm_service.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_guardrails.py  test_prompts.py  test_retrieval.py  test_sample_conversation_traces.py
backend/vectorstore/: bm25_store.py  embeddings.py  faiss_store.py
frontend/: Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/contexts/: CandidateContext.tsx  SessionContext.tsx
frontend/hooks/: useChat.ts
frontend/lib/: api.ts  constants.ts
frontend/types/: index.ts
(+16 files in other folders)
